--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,11 @@ verify_ssl = true
 
 [dev-packages]
 autopep8 = "*"
+pylint = "*"
 
 [packages]
 flask = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.6"
