--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ pylint = "*"
 [packages]
 flask = "*"
 python-dotenv = "*"
+sqlalchemy = "*"
+flask-sqlalchemy = "*"
 
 [requires]
 python_version = "3.6"
