--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-export FLASK_APP=app/app
-export FLASK_ENV=development
+export FLASK_APP="run.py"
+export APP_SETTINGS=development
+export DATABASE_URL="postgresql://localhost/access_api"
