--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 export FLASK_APP="run.py"
 export APP_SETTINGS=development
-export DATABASE_URL="postgresql://localhost/access_api"
+export DATABASE_URL="postgresql://marco:marco@localhost/access_api"
